Fix Select component CSS and overflow on mobile

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -14,6 +14,9 @@ $green-lg: linear-gradient(to right, $green-light 0%, $green-full 100%)
 @import Footer
 @import Hamburger
 
+html, body
+	overflow-x: hidden
+
 body
 	margin: 0
 	font-family: 'Source Sans Pro', FreeSans, sans-serif
