--- a/src/styles/Section.sass
+++ b/src/styles/Section.sass
@@ -19,7 +19,7 @@ section
 		display: flex
 		padding: 20px
 		gap: 20px
-		overflow: auto
+		overflow-x: auto
 	.videos
 		min-height: 264px
 
