--- a/src/styles/Select.sass
+++ b/src/styles/Select.sass
@@ -9,11 +9,12 @@
 		border: none
 		border-radius: inherit
 		text-align: center
-		padding-left: 18px
+		padding-left: 16px
 		font-size: 1rem
 		font-weight: 600
 		background: $green-lg
 		color: transparent
 		-webkit-background-clip: text
-		option
-			font-size: .84rem
+	option
+		color: initial
+		background: initial
